--- a/www/place.html
+++ b/www/place.html
@@ -51,58 +51,9 @@
         <div id="page-content" class="page-content">
             <div id="page-content-scroll">
                 <div class="homepage-slider full-bottom">
-                    <div id="place-slider-wrap" class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <img class="responsive-image" src="images/demo/poshta1.jpg" alt="img">
-                            <div class="slider-caption">
-                                <!--<h3 class="center-text">Телекомуникациски Центар Скопје</h3>-->
-                                <!--<p class="center-text">Meet Sidebars! Power and elegance!</p>-->
-                            </div>
-                            <div class="overlay"></div>
-                        </div>
-                        <div class="swiper-slide">
-                            <img class="responsive-image" src="images/demo/poshta2.jpg" alt="img">
-                            <!--<div class="slider-caption">
-                                <h3 class="left-text">Tons of features</h3>
-                                <p class="left-text">Just a copy and paste away, easy to use!!</p>
-                            </div>-->
-                            <div class="overlay"></div>
-                        </div>
-                        <div class="swiper-slide">
-                            <img class="responsive-image" src="images/demo/poshta3.jpg" alt="img">
-                            <!--<div class="slider-caption">
-                                <h3 class="right-text">Clean code</h3>
-                                <p class="right-text">Use it as a site template or convert it to an app</p>
-                            </div>-->
-                            <div class="overlay"></div>
-                        </div>
-                    </div>
+                    <div id="place-slider-wrap" class="swiper-wrapper"></div>
                 </div>
-                <div id="place-info-wrap" class="content">
-                    <h4 class="bold">Телекомуникациски Центар Скопје</h4>
-                    <div class="place-info">
-                        <span><b>Адреса:</b> Орце Николов бб</span><br />
-                        <span><b>Архитекти:</b> Јанко Константинов</span><br />
-                        <span><b>Период на изградба:</b> Кула и блок(1972-74) | Шалтер сала(1979-1982) </span>
-                    </div>
-                    <p class="place-text half-bottom">
-                        Објектот е сместен на агол од два фреквентни булевари и доминира во просторот.<br /><br />
-                        Поштенскиот комплекс бил реализиран во неколку етапи. Најпрво бил изграден Телекомуникацискиот систем за потребите на телеграфијата и телефонијата, сместен во кула и блок. Потоа започнала изградбата на ПТТ, која во 1975 година ја освоила наградата „11 Октомври“ за најдобро архитектонско остварување за таа година. <br /><br />
-                        Во втората етапа била изградена Шалтер салата, која свечено била отворена во 1981 година. За третата етапа била предвидена изградба на управна зграда, којашто никогаш нема да биде реализирана. <br /><br />
-                        Комплексот е замислен како интегрален елемент на планот на Кензо Танге за постземјотресна обнова на градскиот центар, односно продолжение на новата оска исток-запад, која се движи од Транспортниот центар, преку Градската порта, Градскиот трговски центар и централниот градски плоштад (тогаш „Маршал Тито“, денес плоштад „Македонија“), па сѐ до објектот на ЦК на СКМ (денес Влада на Р. Македонија). Зградата се наоѓа на самиот агол на фреквентните булевари „Гоце Делчев“ и „Илинден“, спроти средновековната тврдина Кале. <br /><br />
-                        Изборот на оваа локација е сврзан и со минатото на тоа место. Имено, пред земјотресот тука се наоѓала Пошта 1. Изведбата на комплексот е во натур бетон, со доминантно бруталистички архитектонски јазик. Површината на бетонот е избраздена со вертикални „канелури“ со правилен профил и хоризонтални жлебови и вовлекувања. Полното ѕидно платно е перфорирано со квдратни, полукружни и кружни отвори со различна големина, планирано поставени согласно со потребите за осветлување на внатрешниот простор. Со бројните декорации, контрасти и разновидноста на облиците, Константинов се доближува до експресионизмот на 1920-тите.
-                    </p>
-                    <div class="responsive-video full-bottom">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/aEgleMkZRUw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </div>
-                    <!--<div class="social-center full-bottom">
-                        <a href="#" class="scale-hover"><i class="fa fa-facebook facebook-color"></i></a>
-                        <a href="#" class="scale-hover"><i class="fa fa-google-plus google-color"></i></a>
-                        <a href="#" class="scale-hover"><i class="fa fa-twitter twitter-color"></i></a>
-                        <div class="clear"></div>
-                    </div>-->
-                    <div class="decoration"></div>
-                </div>
+                <div id="place-info-wrap" class="content"></div>
             </div>
         </div>
 
