--- a/www/place.html
+++ b/www/place.html
@@ -50,8 +50,10 @@
 
         <div id="page-content" class="page-content">
             <div id="page-content-scroll">
-                <div class="homepage-slider full-bottom">
-                    <div id="place-slider-wrap" class="swiper-wrapper"></div>
+                <div class="homepage-slider swiper-container full-bottom">
+                    <div id="place-slider-wrap" class="swiper-wrapper">
+
+                    </div>
                 </div>
                 <div id="place-info-wrap" class="content"></div>
             </div>
