--- a/www/sites.html
+++ b/www/sites.html
@@ -5,7 +5,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-    <link rel="icon" type="image/png" href="/images/splash/android-chrome-192x192.png" sizes="192x192">
+    <!--<link rel="icon" type="image/png" href="/images/splash/android-chrome-192x192.png" sizes="192x192">
     <link rel="apple-touch-icon" sizes="196x196" href="/images/splash/apple-touch-icon-196x196.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/images/splash/apple-touch-icon-180x180.png">
     <link rel="apple-touch-icon" sizes="152x152" href="/images/splash/apple-touch-icon-152x152.png">
@@ -18,8 +18,8 @@
     <link rel="apple-touch-icon" sizes="57x57" href="/images/splash/apple-touch-icon-57x57.png">
     <link rel="icon" type="image/png" href="/images/splash/favicon-96x96.png" sizes="96x96">
     <link rel="icon" type="image/png" href="/images/splash/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/images/splash/favicon-16x16.png" sizes="16x16">
-    <link rel="shortcut icon" href="/images/splash/favicon.ico" type="image/x-icon" />
+    <link rel="icon" type="image/png" href="/images/splash/favicon-16x16.png" sizes="16x16">-->
+    <link rel="shortcut icon" href="icon.png" type="image/x-icon" />
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
 
@@ -31,6 +31,7 @@
 
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="scripts/jquery.js"></script>
+    <script type="text/javascript" src="scripts/swiper.min.js"></script>
     <script type="text/javascript" src="scripts/plugins.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
     <script type="text/javascript" src="scripts/index.js"></script>
@@ -106,6 +107,12 @@
                         <a class="menu-item" href="sitesCategories.html">
                             <i class="fa fa-navicon bg-green-dark"></i>
                             <em>Sites</em>
+                        </a>
+                    </div>
+                    <div>
+                        <a class="menu-item" href="about.html">
+                            <i class="fa fa-comment-o bg-blue-dark"></i>
+                            <em>About Us</em>
                         </a>
                     </div>
                     <div>
